# take

./: .gitignore  .gitmodules  README.md  pyproject.toml  run.py
analysis/: agg_lightning_logs.py  agg_logs.ipynb  clone_col.py  compact_csv.py  data_explore.ipynb  gather_reported.py  report.ipynb  report_processed.ipynb  report_reported.ipynb  stack_csv.py  utils.py
expts/: classify.py  classify2.py  condense.py  embed.py  eval_cls.py  eval_nli.py  expt_utils.py  finetune.py  generate.py
pipelines/: classify.py  classify2.py  condense.py  embed.py  finetune.py  generate.py
references/: references.md
scripts/: embed.sh  run.sh
src/finetune/: __init__.py  callbacks.py  collators.py  map_function.py  templates.py
src/generate/: utils.py
src/influence/: __init__.py  batch_unpack.py  fisher.py  joint_marginal.py  lissa.py  residual.py
src/metadata/: __init__.py  classifier.py  dataset.py  encoder.py  llm.py
src/metrics/: __init__.py  dcr.py  distinctn.py  infogain.py  perplexity.py  selfbleu.py  similarity.py  ttr.py
src/models/classifiers/: README.md  __init__.py  base_classifier.py  distilbert.py  logistic_regression.py  metadata.py  naive_bayes.py  siamese_logistic.py  support_vector_machine.py  textcnn.py  textrnn.py  trainer.py
src/models/encoders/: README.md  __init__.py  e5.py  glove-download.sh  glove.py  jina.py  metadata.py  minilm.py  tdidf.py
src/models/llms/: __init__.py  metadata.py
src/models/modules/: __init__.py  concatenate.py  eda.py  losses.py  reshape.py  view.py
src/prototypes/: ddpm.py  discreteot.py  flow_matching.py  gan.py  gmm.py  kmeans.py  meshgrid.py  optimal_transport.py  prototypes.py  vae.py
src/utils/: metadata.py  typing.py
src/utils/callbacks/: README.md  __init__.py  csv_logger.py  printer.py
src/utils/data/: synthetic.py
src/utils/metrics/: __init__.py  walltime.py
src/utils/pythonic/: dict_utils.py  numeric_utils.py
