[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "textdd"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datasets",
    "evaluate",
    "ipykernel",
    "lightning",
    "matplotlib",
    "nltk",
    "numpy",
    "polars",
    "peft",
    "PyYAML",
    "scikit-learn",
    "sentence-transformers",
    "torch",
    "torchinfo",
    "tqdm",
    "transformers",
]

# Dataset Distillation with Attention Labels for Fine-tuning BERT - Maekawa et al., ACL 2023
# https://github.com/arumaekawa/dataset-distillation-with-attention-labels/blob/master/requirements.txt
#   --index-url https://download.pytorch.org/whl/cu118
#   # python 3.10.0
#   datasets==2.11.0
#   evaluate==0.4.0
#   hydra-core==1.3.2
#   mlflow==2.2.2
#   scikit-learn==1.2.2
#   torch==2.0.0+cu118
#   transformers==4.28.1

# DiLM Distilling Dataset into Language Model for Text-level Dataset Distillation - Maekawa et al., NAACL Findings 2024
# https://github.com/arumaekawa/DiLM/blob/main/requirements.txt
#   # python 3.10.0
#   datasets==2.18.0
#   evaluate==0.4.0
#   hydra-core==1.3.2
#   mlflow==2.2.2
#   scikit-learn==1.2.2
#   torch==2.0.0+cu118
#   transformers==4.30.0

# Text Embeddings Reveal (Almost) As Much As Text - Morris et al., EMNLP 2023 - Vec2Text
#   accelerate
#   bert_score
#   datasets
#   einops
#   evaluate
#   openai
#   optimum
#   pre-commit
#   rouge_score
#   sacrebleu
#   sentence_transformers
#   tenacity
#   tokenizers
#   tqdm
#   transformers